--- a/NewsPulse-main/frontend/index.html
+++ b/NewsPulse-main/frontend/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>News93 - Your Personalized News Service</title>
+    <meta name="description" content="Get personalized news delivered instantly via Telegram or email. Choose your categories and preferred delivery time." />
   </head>
   <body>
     <div id="root"></div>
